--- a/archives/toutiao-search/2024-04-03.md
+++ b/archives/toutiao-search/2024-04-03.md
@@ -1,46 +1,74 @@
 # 2024-04-03
 
-共 181 条
+共 207 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Apr 03 2024 11:00:55 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Apr 03 2024 12:00:47 GMT+0800 (China Standard Time) -->
 1. [台湾地震：整片山体滑落](https://so.toutiao.com/search?keyword=台湾地震：整片山体滑落)
-1. [自然资源部发布海啸Ⅰ级警报](https://so.toutiao.com/search?keyword=自然资源部发布海啸Ⅰ级警报)
-1. [2024年中非互联网发展与合作论坛](https://so.toutiao.com/search?keyword=2024年中非互联网发展与合作论坛)
+1. [台湾强震已致4死97伤](https://so.toutiao.com/search?keyword=台湾强震已致4死97伤)
+1. [共谱中非数字合作新篇章](https://so.toutiao.com/search?keyword=共谱中非数字合作新篇章)
 1. [花莲一栋高楼被“整根拔起”](https://so.toutiao.com/search?keyword=花莲一栋高楼被“整根拔起”)
-1. [日本气象厅：海啸抵达冲绳与那国岛](https://so.toutiao.com/search?keyword=日本气象厅：海啸抵达冲绳与那国岛)
 1. [男子从蹲地小孩头上跨过拒道歉](https://so.toutiao.com/search?keyword=男子从蹲地小孩头上跨过拒道歉)
-1. [台湾7.3级强震是今年我国最强地震](https://so.toutiao.com/search?keyword=台湾7.3级强震是今年我国最强地震)
-1. [台湾著名景点宜兰龟山岛断裂](https://so.toutiao.com/search?keyword=台湾著名景点宜兰龟山岛断裂)
-1. [江西狂风尖啸窗户被吹炸](https://so.toutiao.com/search?keyword=江西狂风尖啸窗户被吹炸)
-1. [7.3级地震警报没响 台当局被质疑](https://so.toutiao.com/search?keyword=7.3级地震警报没响+台当局被质疑)
-1. [刘若英提醒小心余震](https://so.toutiao.com/search?keyword=刘若英提醒小心余震)
-1. [福州福飞北路核辐射超标？不实](https://so.toutiao.com/search?keyword=福州福飞北路核辐射超标？不实)
-1. [李若彤回应58岁未婚未育](https://so.toutiao.com/search?keyword=李若彤回应58岁未婚未育)
+1. [雷军亲自为小米SU7车主开门](https://so.toutiao.com/search?keyword=雷军亲自为小米SU7车主开门)
 1. [直击台湾地震现场](https://so.toutiao.com/search?keyword=直击台湾地震现场)
+1. [湖人128-111轻取猛龙](https://so.toutiao.com/search?keyword=湖人128-111轻取猛龙)
+1. [网友称举报上饶房屋违建官方答非所问](https://so.toutiao.com/search?keyword=网友称举报上饶房屋违建官方答非所问)
+1. [台湾强震全岛摇晃1分钟 整栋楼倾斜](https://so.toutiao.com/search?keyword=台湾强震全岛摇晃1分钟+整栋楼倾斜)
 1. [提灯定损事件伤害了谁](https://so.toutiao.com/search?keyword=提灯定损事件伤害了谁)
+1. [福州福飞北路核辐射超标？不实](https://so.toutiao.com/search?keyword=福州福飞北路核辐射超标？不实)
+1. [台湾7.3级强震是今年我国最强地震](https://so.toutiao.com/search?keyword=台湾7.3级强震是今年我国最强地震)
+1. [台湾百年大烟囱被强震“拦头折断”](https://so.toutiao.com/search?keyword=台湾百年大烟囱被强震“拦头折断”)
+1. [网友谈小米营销：看小字否则踩大坑](https://so.toutiao.com/search?keyword=网友谈小米营销：看小字否则踩大坑)
+1. [李若彤回应58岁未婚未育](https://so.toutiao.com/search?keyword=李若彤回应58岁未婚未育)
+1. [台湾7.3级地震 厦门杭州震感强烈](https://so.toutiao.com/search?keyword=台湾7.3级地震+厦门杭州震感强烈)
+1. [美财政部公布耶伦访华行程](https://so.toutiao.com/search?keyword=美财政部公布耶伦访华行程)
+1. [日本为何推行“国民收入倍增计划”](https://so.toutiao.com/search?keyword=日本为何推行“国民收入倍增计划”)
+1. [专家分析台湾地震成因](https://so.toutiao.com/search?keyword=专家分析台湾地震成因)
+1. [姜爷爷母亲去世依然坚持送福宝回国](https://so.toutiao.com/search?keyword=姜爷爷母亲去世依然坚持送福宝回国)
 1. [南昌打雷视频引恐慌 市民：加了特效](https://so.toutiao.com/search?keyword=南昌打雷视频引恐慌+市民：加了特效)
 1. [台湾强震会影响上海高层建筑吗](https://so.toutiao.com/search?keyword=台湾强震会影响上海高层建筑吗)
-1. [提灯定损](https://so.toutiao.com/search?keyword=提灯定损)
+1. [媒体：唐一军的两次转折有何深意](https://so.toutiao.com/search?keyword=媒体：唐一军的两次转折有何深意)
+1. [以轰炸伊朗使馆会引发中东新大战吗](https://so.toutiao.com/search?keyword=以轰炸伊朗使馆会引发中东新大战吗)
+1. [台湾著名景点宜兰龟山岛断裂](https://so.toutiao.com/search?keyword=台湾著名景点宜兰龟山岛断裂)
+1. [中国驻韩大使特意来送福宝回国](https://so.toutiao.com/search?keyword=中国驻韩大使特意来送福宝回国)
+1. [俄罗斯鞑靼斯坦共和国遭无人机袭击](https://so.toutiao.com/search?keyword=俄罗斯鞑靼斯坦共和国遭无人机袭击)
+1. [台民众：此次比9·21强震还可怕](https://so.toutiao.com/search?keyword=台民众：此次比9·21强震还可怕)
+1. [五问提灯定损: 是否敲诈是否违建](https://so.toutiao.com/search?keyword=五问提灯定损:+是否敲诈是否违建)
+1. [雷军：小米正式成为一家车厂](https://so.toutiao.com/search?keyword=雷军：小米正式成为一家车厂)
+1. [日本气象厅：海啸抵达冲绳与那国岛](https://so.toutiao.com/search?keyword=日本气象厅：海啸抵达冲绳与那国岛)
+1. [2000多名师生徒步百里祭英烈](https://so.toutiao.com/search?keyword=2000多名师生徒步百里祭英烈)
+1. [搜救队员讲述遇害11岁女孩发现过程](https://so.toutiao.com/search?keyword=搜救队员讲述遇害11岁女孩发现过程)
+1. [台新北一仓库倒塌 3人被救1人受困](https://so.toutiao.com/search?keyword=台新北一仓库倒塌+3人被救1人受困)
+1. [特雷·杨致敬隆多：最出色球员之一](https://so.toutiao.com/search?keyword=特雷·杨致敬隆多：最出色球员之一)
+1. [掘金主帅：文班能让队友们变得更好](https://so.toutiao.com/search?keyword=掘金主帅：文班能让队友们变得更好)
+1. [海啸警报解除](https://so.toutiao.com/search?keyword=海啸警报解除)
+1. [胡锡进：在美国无存款无房产无亲人](https://so.toutiao.com/search?keyword=胡锡进：在美国无存款无房产无亲人)
+1. [江西狂风尖啸窗户被吹炸](https://so.toutiao.com/search?keyword=江西狂风尖啸窗户被吹炸)
+1. [高铁晚点](https://so.toutiao.com/search?keyword=高铁晚点)
+1. [男子小区内驾车碾压3人 警方通报](https://so.toutiao.com/search?keyword=男子小区内驾车碾压3人+警方通报)
+1. [华晨宇疑回应月经羞耻话题](https://so.toutiao.com/search?keyword=华晨宇疑回应月经羞耻话题)
+1. [地震致郭台铭豪宅顶楼游泳池变瀑布](https://so.toutiao.com/search?keyword=地震致郭台铭豪宅顶楼游泳池变瀑布)
+1. [台未来三天或还有规模7级地震发生](https://so.toutiao.com/search?keyword=台未来三天或还有规模7级地震发生)
+1. [7.3级地震警报没响 台当局被质疑](https://so.toutiao.com/search?keyword=7.3级地震警报没响+台当局被质疑)
+1. [曾宝仪亲历地震称根本站不稳](https://so.toutiao.com/search?keyword=曾宝仪亲历地震称根本站不稳)
+1. [台当局开设灾害应变中心](https://so.toutiao.com/search?keyword=台当局开设灾害应变中心)
+1. [远距离大震为何会使上海的高楼摇晃](https://so.toutiao.com/search?keyword=远距离大震为何会使上海的高楼摇晃)
 1. [马英九就台湾强震发声：望一切平安](https://so.toutiao.com/search?keyword=马英九就台湾强震发声：望一切平安)
-1. [台湾7.3级地震 厦门杭州震感强烈](https://so.toutiao.com/search?keyword=台湾7.3级地震+厦门杭州震感强烈)
+1. [自然资源部发布海啸Ⅰ级警报](https://so.toutiao.com/search?keyword=自然资源部发布海啸Ⅰ级警报)
+1. [2024年中非互联网发展与合作论坛](https://so.toutiao.com/search?keyword=2024年中非互联网发展与合作论坛)
+1. [刘若英提醒小心余震](https://so.toutiao.com/search?keyword=刘若英提醒小心余震)
+1. [提灯定损](https://so.toutiao.com/search?keyword=提灯定损)
 1. [浙江金华落水失联体校学生遗体找到](https://so.toutiao.com/search?keyword=浙江金华落水失联体校学生遗体找到)
 1. [直击旅韩大熊猫福宝回国](https://so.toutiao.com/search?keyword=直击旅韩大熊猫福宝回国)
-1. [台湾强震全岛摇晃1分钟 整栋楼倾斜](https://so.toutiao.com/search?keyword=台湾强震全岛摇晃1分钟+整栋楼倾斜)
-1. [俄罗斯鞑靼斯坦共和国遭无人机袭击](https://so.toutiao.com/search?keyword=俄罗斯鞑靼斯坦共和国遭无人机袭击)
 1. [台积电：受损状况目前还在清查](https://so.toutiao.com/search?keyword=台积电：受损状况目前还在清查)
-1. [专家分析台湾地震成因](https://so.toutiao.com/search?keyword=专家分析台湾地震成因)
-1. [五问提灯定损: 是否敲诈是否违建](https://so.toutiao.com/search?keyword=五问提灯定损:+是否敲诈是否违建)
 1. [“731部队”词条在美国突然火了](https://so.toutiao.com/search?keyword=“731部队”词条在美国突然火了)
 1. [台湾一小时内连发3次强震](https://so.toutiao.com/search?keyword=台湾一小时内连发3次强震)
 1. [电动车相撞倒地两人姿势一致等交警](https://so.toutiao.com/search?keyword=电动车相撞倒地两人姿势一致等交警)
-1. [搜救队员讲述遇害11岁女孩发现过程](https://so.toutiao.com/search?keyword=搜救队员讲述遇害11岁女孩发现过程)
 1. [台湾地震后发生山崩汽车被砸](https://so.toutiao.com/search?keyword=台湾地震后发生山崩汽车被砸)
 1. [清明节发源地](https://so.toutiao.com/search?keyword=清明节发源地)
 1. [俄多名女子街头上演全裸派对](https://so.toutiao.com/search?keyword=俄多名女子街头上演全裸派对)
 1. [台湾地震引发一塑料工厂大面积坍塌](https://so.toutiao.com/search?keyword=台湾地震引发一塑料工厂大面积坍塌)
 1. [大熊猫福宝今日回国](https://so.toutiao.com/search?keyword=大熊猫福宝今日回国)
-1. [以轰炸伊朗使馆会引发中东新大战吗](https://so.toutiao.com/search?keyword=以轰炸伊朗使馆会引发中东新大战吗)
 1. [厦门震感强烈 有学校师生紧急疏散](https://so.toutiao.com/search?keyword=厦门震感强烈+有学校师生紧急疏散)
 1. [台湾花莲一大楼倾斜 3人被困地下室](https://so.toutiao.com/search?keyword=台湾花莲一大楼倾斜+3人被困地下室)
 1. [矣进宏：争取再得到出场机会](https://so.toutiao.com/search?keyword=矣进宏：争取再得到出场机会)
@@ -53,7 +81,6 @@
 1. [受地震影响 台湾花莲县停班停课](https://so.toutiao.com/search?keyword=受地震影响+台湾花莲县停班停课)
 1. [中学生徒步去许继慎将军陵园扫墓](https://so.toutiao.com/search?keyword=中学生徒步去许继慎将军陵园扫墓)
 1. [人大代表被政协委员撞死 家属发声](https://so.toutiao.com/search?keyword=人大代表被政协委员撞死+家属发声)
-1. [曾宝仪亲历地震称根本站不稳](https://so.toutiao.com/search?keyword=曾宝仪亲历地震称根本站不稳)
 1. [台湾地震：高楼被“整根拔起”](https://so.toutiao.com/search?keyword=台湾地震：高楼被“整根拔起”)
 1. [媒体：上饶应直面提灯定损讹诈质疑](https://so.toutiao.com/search?keyword=媒体：上饶应直面提灯定损讹诈质疑)
 1. [金华市体育运动学校发布沉痛告知](https://so.toutiao.com/search?keyword=金华市体育运动学校发布沉痛告知)
@@ -72,7 +99,6 @@
 1. [俄罗斯为何重启“超级炸弹”生产](https://so.toutiao.com/search?keyword=俄罗斯为何重启“超级炸弹”生产)
 1. [中国夫妇在刚果（金）遇袭致一死](https://so.toutiao.com/search?keyword=中国夫妇在刚果（金）遇袭致一死)
 1. [台湾花莲县海域发生6.0级地震](https://so.toutiao.com/search?keyword=台湾花莲县海域发生6.0级地震)
-1. [华晨宇疑回应月经羞耻话题](https://so.toutiao.com/search?keyword=华晨宇疑回应月经羞耻话题)
 1. [我国成功发射遥感四十二号01星](https://so.toutiao.com/search?keyword=我国成功发射遥感四十二号01星)
 1. [大熊猫“福宝”不满4岁还不能谈恋爱](https://so.toutiao.com/search?keyword=大熊猫“福宝”不满4岁还不能谈恋爱)
 1. [南昌高校遭狂风暴雨 男生合力堵门](https://so.toutiao.com/search?keyword=南昌高校遭狂风暴雨+男生合力堵门)
