--- a/archives/toutiao-search/2024-04-03.md
+++ b/archives/toutiao-search/2024-04-03.md
@@ -1,59 +1,78 @@
 # 2024-04-03
 
-共 207 条
+共 226 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Apr 03 2024 12:00:47 GMT+0800 (China Standard Time) -->
-1. [台湾地震：整片山体滑落](https://so.toutiao.com/search?keyword=台湾地震：整片山体滑落)
+<!-- 最后更新时间 Wed Apr 03 2024 13:00:39 GMT+0800 (China Standard Time) -->
 1. [台湾强震已致4死97伤](https://so.toutiao.com/search?keyword=台湾强震已致4死97伤)
+1. [男子在提灯定损房东楼下开播遭驱离](https://so.toutiao.com/search?keyword=男子在提灯定损房东楼下开播遭驱离)
 1. [共谱中非数字合作新篇章](https://so.toutiao.com/search?keyword=共谱中非数字合作新篇章)
-1. [花莲一栋高楼被“整根拔起”](https://so.toutiao.com/search?keyword=花莲一栋高楼被“整根拔起”)
-1. [男子从蹲地小孩头上跨过拒道歉](https://so.toutiao.com/search?keyword=男子从蹲地小孩头上跨过拒道歉)
+1. [台湾地震：整片山体滑落](https://so.toutiao.com/search?keyword=台湾地震：整片山体滑落)
 1. [雷军亲自为小米SU7车主开门](https://so.toutiao.com/search?keyword=雷军亲自为小米SU7车主开门)
-1. [直击台湾地震现场](https://so.toutiao.com/search?keyword=直击台湾地震现场)
-1. [湖人128-111轻取猛龙](https://so.toutiao.com/search?keyword=湖人128-111轻取猛龙)
-1. [网友称举报上饶房屋违建官方答非所问](https://so.toutiao.com/search?keyword=网友称举报上饶房屋违建官方答非所问)
-1. [台湾强震全岛摇晃1分钟 整栋楼倾斜](https://so.toutiao.com/search?keyword=台湾强震全岛摇晃1分钟+整栋楼倾斜)
-1. [提灯定损事件伤害了谁](https://so.toutiao.com/search?keyword=提灯定损事件伤害了谁)
-1. [福州福飞北路核辐射超标？不实](https://so.toutiao.com/search?keyword=福州福飞北路核辐射超标？不实)
-1. [台湾7.3级强震是今年我国最强地震](https://so.toutiao.com/search?keyword=台湾7.3级强震是今年我国最强地震)
-1. [台湾百年大烟囱被强震“拦头折断”](https://so.toutiao.com/search?keyword=台湾百年大烟囱被强震“拦头折断”)
-1. [网友谈小米营销：看小字否则踩大坑](https://so.toutiao.com/search?keyword=网友谈小米营销：看小字否则踩大坑)
-1. [李若彤回应58岁未婚未育](https://so.toutiao.com/search?keyword=李若彤回应58岁未婚未育)
-1. [台湾7.3级地震 厦门杭州震感强烈](https://so.toutiao.com/search?keyword=台湾7.3级地震+厦门杭州震感强烈)
+1. [网友：提灯定损房东全村或都涉违建](https://so.toutiao.com/search?keyword=网友：提灯定损房东全村或都涉违建)
+1. [花莲一栋高楼被“整根拔起”](https://so.toutiao.com/search?keyword=花莲一栋高楼被“整根拔起”)
 1. [美财政部公布耶伦访华行程](https://so.toutiao.com/search?keyword=美财政部公布耶伦访华行程)
-1. [日本为何推行“国民收入倍增计划”](https://so.toutiao.com/search?keyword=日本为何推行“国民收入倍增计划”)
-1. [专家分析台湾地震成因](https://so.toutiao.com/search?keyword=专家分析台湾地震成因)
-1. [姜爷爷母亲去世依然坚持送福宝回国](https://so.toutiao.com/search?keyword=姜爷爷母亲去世依然坚持送福宝回国)
-1. [南昌打雷视频引恐慌 市民：加了特效](https://so.toutiao.com/search?keyword=南昌打雷视频引恐慌+市民：加了特效)
+1. [提灯定损事件伤害了谁](https://so.toutiao.com/search?keyword=提灯定损事件伤害了谁)
+1. [直击台湾地震现场](https://so.toutiao.com/search?keyword=直击台湾地震现场)
+1. [菲律宾解除海啸警报](https://so.toutiao.com/search?keyword=菲律宾解除海啸警报)
+1. [提灯定损房东或面临10项问题](https://so.toutiao.com/search?keyword=提灯定损房东或面临10项问题)
+1. [宁波一小区外墙被震开裂？不实](https://so.toutiao.com/search?keyword=宁波一小区外墙被震开裂？不实)
+1. [台湾7.3级强震是今年我国最强地震](https://so.toutiao.com/search?keyword=台湾7.3级强震是今年我国最强地震)
 1. [台湾强震会影响上海高层建筑吗](https://so.toutiao.com/search?keyword=台湾强震会影响上海高层建筑吗)
+1. [雷军：小米SU7锁单量已超4万单](https://so.toutiao.com/search?keyword=雷军：小米SU7锁单量已超4万单)
+1. [男子从蹲地小孩头上跨过拒道歉](https://so.toutiao.com/search?keyword=男子从蹲地小孩头上跨过拒道歉)
+1. [台湾7.3级地震 厦门杭州震感强烈](https://so.toutiao.com/search?keyword=台湾7.3级地震+厦门杭州震感强烈)
+1. [雷军：大家是不是该叫我雷厂长了](https://so.toutiao.com/search?keyword=雷军：大家是不是该叫我雷厂长了)
+1. [姜爷爷母亲去世依然坚持送福宝回国](https://so.toutiao.com/search?keyword=姜爷爷母亲去世依然坚持送福宝回国)
+1. [台湾强震全岛摇晃1分钟 整栋楼倾斜](https://so.toutiao.com/search?keyword=台湾强震全岛摇晃1分钟+整栋楼倾斜)
+1. [网友称举报上饶房屋违建官方答非所问](https://so.toutiao.com/search?keyword=网友称举报上饶房屋违建官方答非所问)
+1. [韩国粉丝送别福宝泣不成声](https://so.toutiao.com/search?keyword=韩国粉丝送别福宝泣不成声)
+1. [台湾百年大烟囱被强震“拦头折断”](https://so.toutiao.com/search?keyword=台湾百年大烟囱被强震“拦头折断”)
+1. [雷军：小米正式成为一家车厂](https://so.toutiao.com/search?keyword=雷军：小米正式成为一家车厂)
+1. [网友：上饶房东不怕曝光更值得关注](https://so.toutiao.com/search?keyword=网友：上饶房东不怕曝光更值得关注)
+1. [台湾著名景点宜兰龟山岛断裂](https://so.toutiao.com/search?keyword=台湾著名景点宜兰龟山岛断裂)
+1. [乌FPV无人机撞击俄军未爆航空炸弹](https://so.toutiao.com/search?keyword=乌FPV无人机撞击俄军未爆航空炸弹)
+1. [退租定损谁说的算](https://so.toutiao.com/search?keyword=退租定损谁说的算)
+1. [日本气象厅：海啸抵达冲绳与那国岛](https://so.toutiao.com/search?keyword=日本气象厅：海啸抵达冲绳与那国岛)
+1. [开封王婆家属否认成立婚介公司](https://so.toutiao.com/search?keyword=开封王婆家属否认成立婚介公司)
+1. [江西狂风尖啸窗户被吹炸](https://so.toutiao.com/search?keyword=江西狂风尖啸窗户被吹炸)
+1. [地震致郭台铭豪宅顶楼游泳池变瀑布](https://so.toutiao.com/search?keyword=地震致郭台铭豪宅顶楼游泳池变瀑布)
+1. [强震逢民众党晨会 柯文哲趴地躲桌下](https://so.toutiao.com/search?keyword=强震逢民众党晨会+柯文哲趴地躲桌下)
+1. [南昌打雷视频引恐慌 市民：加了特效](https://so.toutiao.com/search?keyword=南昌打雷视频引恐慌+市民：加了特效)
+1. [专家分析台湾地震成因](https://so.toutiao.com/search?keyword=专家分析台湾地震成因)
+1. [媒体：别让流量消解相亲严肃性](https://so.toutiao.com/search?keyword=媒体：别让流量消解相亲严肃性)
+1. [网友谈小米营销：看小字否则踩大坑](https://so.toutiao.com/search?keyword=网友谈小米营销：看小字否则踩大坑)
+1. [台民众：此次比9·21强震还可怕](https://so.toutiao.com/search?keyword=台民众：此次比9·21强震还可怕)
+1. [男子小区内驾车碾压3人 警方通报](https://so.toutiao.com/search?keyword=男子小区内驾车碾压3人+警方通报)
+1. [詹姆斯近2战投篮命中率79.3%](https://so.toutiao.com/search?keyword=詹姆斯近2战投篮命中率79.3%)
+1. [台专家：地震威力如32颗原子弹爆炸](https://so.toutiao.com/search?keyword=台专家：地震威力如32颗原子弹爆炸)
+1. [地震海啸驾车避险自救指南](https://so.toutiao.com/search?keyword=地震海啸驾车避险自救指南)
+1. [2000多名师生徒步百里祭英烈](https://so.toutiao.com/search?keyword=2000多名师生徒步百里祭英烈)
+1. [高铁晚点](https://so.toutiao.com/search?keyword=高铁晚点)
+1. [李若彤回应58岁未婚未育](https://so.toutiao.com/search?keyword=李若彤回应58岁未婚未育)
+1. [邱毅发文报平安](https://so.toutiao.com/search?keyword=邱毅发文报平安)
+1. [台未来三天或还有规模7级地震发生](https://so.toutiao.com/search?keyword=台未来三天或还有规模7级地震发生)
+1. [马英九就台湾强震发声：望一切平安](https://so.toutiao.com/search?keyword=马英九就台湾强震发声：望一切平安)
+1. [台北一新建高楼上方吊臂被地震震落](https://so.toutiao.com/search?keyword=台北一新建高楼上方吊臂被地震震落)
+1. [湖人128-111轻取猛龙](https://so.toutiao.com/search?keyword=湖人128-111轻取猛龙)
+1. [福州福飞北路核辐射超标？不实](https://so.toutiao.com/search?keyword=福州福飞北路核辐射超标？不实)
+1. [日本为何推行“国民收入倍增计划”](https://so.toutiao.com/search?keyword=日本为何推行“国民收入倍增计划”)
 1. [媒体：唐一军的两次转折有何深意](https://so.toutiao.com/search?keyword=媒体：唐一军的两次转折有何深意)
 1. [以轰炸伊朗使馆会引发中东新大战吗](https://so.toutiao.com/search?keyword=以轰炸伊朗使馆会引发中东新大战吗)
-1. [台湾著名景点宜兰龟山岛断裂](https://so.toutiao.com/search?keyword=台湾著名景点宜兰龟山岛断裂)
 1. [中国驻韩大使特意来送福宝回国](https://so.toutiao.com/search?keyword=中国驻韩大使特意来送福宝回国)
 1. [俄罗斯鞑靼斯坦共和国遭无人机袭击](https://so.toutiao.com/search?keyword=俄罗斯鞑靼斯坦共和国遭无人机袭击)
-1. [台民众：此次比9·21强震还可怕](https://so.toutiao.com/search?keyword=台民众：此次比9·21强震还可怕)
 1. [五问提灯定损: 是否敲诈是否违建](https://so.toutiao.com/search?keyword=五问提灯定损:+是否敲诈是否违建)
-1. [雷军：小米正式成为一家车厂](https://so.toutiao.com/search?keyword=雷军：小米正式成为一家车厂)
-1. [日本气象厅：海啸抵达冲绳与那国岛](https://so.toutiao.com/search?keyword=日本气象厅：海啸抵达冲绳与那国岛)
-1. [2000多名师生徒步百里祭英烈](https://so.toutiao.com/search?keyword=2000多名师生徒步百里祭英烈)
 1. [搜救队员讲述遇害11岁女孩发现过程](https://so.toutiao.com/search?keyword=搜救队员讲述遇害11岁女孩发现过程)
 1. [台新北一仓库倒塌 3人被救1人受困](https://so.toutiao.com/search?keyword=台新北一仓库倒塌+3人被救1人受困)
 1. [特雷·杨致敬隆多：最出色球员之一](https://so.toutiao.com/search?keyword=特雷·杨致敬隆多：最出色球员之一)
 1. [掘金主帅：文班能让队友们变得更好](https://so.toutiao.com/search?keyword=掘金主帅：文班能让队友们变得更好)
 1. [海啸警报解除](https://so.toutiao.com/search?keyword=海啸警报解除)
 1. [胡锡进：在美国无存款无房产无亲人](https://so.toutiao.com/search?keyword=胡锡进：在美国无存款无房产无亲人)
-1. [江西狂风尖啸窗户被吹炸](https://so.toutiao.com/search?keyword=江西狂风尖啸窗户被吹炸)
-1. [高铁晚点](https://so.toutiao.com/search?keyword=高铁晚点)
-1. [男子小区内驾车碾压3人 警方通报](https://so.toutiao.com/search?keyword=男子小区内驾车碾压3人+警方通报)
 1. [华晨宇疑回应月经羞耻话题](https://so.toutiao.com/search?keyword=华晨宇疑回应月经羞耻话题)
-1. [地震致郭台铭豪宅顶楼游泳池变瀑布](https://so.toutiao.com/search?keyword=地震致郭台铭豪宅顶楼游泳池变瀑布)
-1. [台未来三天或还有规模7级地震发生](https://so.toutiao.com/search?keyword=台未来三天或还有规模7级地震发生)
 1. [7.3级地震警报没响 台当局被质疑](https://so.toutiao.com/search?keyword=7.3级地震警报没响+台当局被质疑)
 1. [曾宝仪亲历地震称根本站不稳](https://so.toutiao.com/search?keyword=曾宝仪亲历地震称根本站不稳)
 1. [台当局开设灾害应变中心](https://so.toutiao.com/search?keyword=台当局开设灾害应变中心)
 1. [远距离大震为何会使上海的高楼摇晃](https://so.toutiao.com/search?keyword=远距离大震为何会使上海的高楼摇晃)
-1. [马英九就台湾强震发声：望一切平安](https://so.toutiao.com/search?keyword=马英九就台湾强震发声：望一切平安)
 1. [自然资源部发布海啸Ⅰ级警报](https://so.toutiao.com/search?keyword=自然资源部发布海啸Ⅰ级警报)
 1. [2024年中非互联网发展与合作论坛](https://so.toutiao.com/search?keyword=2024年中非互联网发展与合作论坛)
 1. [刘若英提醒小心余震](https://so.toutiao.com/search?keyword=刘若英提醒小心余震)
