--- a/archives/toutiao-search/2024-04-03.md
+++ b/archives/toutiao-search/2024-04-03.md
@@ -1,58 +1,77 @@
 # 2024-04-03
 
-共 241 条
+共 256 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Apr 03 2024 14:00:39 GMT+0800 (China Standard Time) -->
-1. [台花莲10层大楼强震中倒塌瞬间曝光](https://so.toutiao.com/search?keyword=台花莲10层大楼强震中倒塌瞬间曝光)
+<!-- 最后更新时间 Wed Apr 03 2024 15:00:53 GMT+0800 (China Standard Time) -->
+1. [花莲10层大楼强震中倒塌瞬间曝光](https://so.toutiao.com/search?keyword=花莲10层大楼强震中倒塌瞬间曝光)
 1. [提灯定损房东或面临10项问题](https://so.toutiao.com/search?keyword=提灯定损房东或面临10项问题)
 1. [共谱中非数字合作新篇章](https://so.toutiao.com/search?keyword=共谱中非数字合作新篇章)
-1. [台湾强震已致4死97伤](https://so.toutiao.com/search?keyword=台湾强震已致4死97伤)
+1. [地震后目睹山崩 台湾游客崩溃大哭](https://so.toutiao.com/search?keyword=地震后目睹山崩+台湾游客崩溃大哭)
 1. [提灯定损房东被行拘](https://so.toutiao.com/search?keyword=提灯定损房东被行拘)
-1. [台湾空军基地至少8架F-16战机受损](https://so.toutiao.com/search?keyword=台湾空军基地至少8架F-16战机受损)
-1. [台湾地震已引发局地海啸](https://so.toutiao.com/search?keyword=台湾地震已引发局地海啸)
-1. [男子在提灯定损房东楼下开播遭驱离](https://so.toutiao.com/search?keyword=男子在提灯定损房东楼下开播遭驱离)
-1. [网友谈小米营销：看小字否则踩大坑](https://so.toutiao.com/search?keyword=网友谈小米营销：看小字否则踩大坑)
-1. [台湾地震：整片山体滑落](https://so.toutiao.com/search?keyword=台湾地震：整片山体滑落)
-1. [网友：提灯定损房东全村或都涉违建](https://so.toutiao.com/search?keyword=网友：提灯定损房东全村或都涉违建)
-1. [美财政部公布耶伦访华行程](https://so.toutiao.com/search?keyword=美财政部公布耶伦访华行程)
-1. [宁波一小区外墙被震开裂？不实](https://so.toutiao.com/search?keyword=宁波一小区外墙被震开裂？不实)
+1. [雷军：大家是不是该叫我雷厂长了](https://so.toutiao.com/search?keyword=雷军：大家是不是该叫我雷厂长了)
 1. [直击台湾地震现场](https://so.toutiao.com/search?keyword=直击台湾地震现场)
-1. [网友：上饶房东不怕曝光更值得关注](https://so.toutiao.com/search?keyword=网友：上饶房东不怕曝光更值得关注)
-1. [2000多名师生徒步百里祭英烈](https://so.toutiao.com/search?keyword=2000多名师生徒步百里祭英烈)
+1. [网友：提灯定损房东全村或都涉违建](https://so.toutiao.com/search?keyword=网友：提灯定损房东全村或都涉违建)
+1. [敲门神器也太可爱了](https://so.toutiao.com/search?keyword=敲门神器也太可爱了)
 1. [花莲一栋高楼被“整根拔起”](https://so.toutiao.com/search?keyword=花莲一栋高楼被“整根拔起”)
-1. [大V：提灯定损村委会协调败事有余](https://so.toutiao.com/search?keyword=大V：提灯定损村委会协调败事有余)
-1. [雷军亲自为小米SU7车主开门](https://so.toutiao.com/search?keyword=雷军亲自为小米SU7车主开门)
-1. [台湾7.3级地震 厦门杭州震感强烈](https://so.toutiao.com/search?keyword=台湾7.3级地震+厦门杭州震感强烈)
-1. [姜爷爷母亲去世依然坚持送福宝回国](https://so.toutiao.com/search?keyword=姜爷爷母亲去世依然坚持送福宝回国)
-1. [网友称举报上饶房屋违建官方答非所问](https://so.toutiao.com/search?keyword=网友称举报上饶房屋违建官方答非所问)
-1. [台湾强震会影响上海高层建筑吗](https://so.toutiao.com/search?keyword=台湾强震会影响上海高层建筑吗)
-1. [台湾7.3级强震是今年我国最强地震](https://so.toutiao.com/search?keyword=台湾7.3级强震是今年我国最强地震)
-1. [韩国粉丝送别福宝泣不成声](https://so.toutiao.com/search?keyword=韩国粉丝送别福宝泣不成声)
-1. [日本气象厅：海啸抵达冲绳与那国岛](https://so.toutiao.com/search?keyword=日本气象厅：海啸抵达冲绳与那国岛)
-1. [台媒：花莲成“孤城”](https://so.toutiao.com/search?keyword=台媒：花莲成“孤城”)
+1. [网友：上饶房东不怕曝光更值得关注](https://so.toutiao.com/search?keyword=网友：上饶房东不怕曝光更值得关注)
+1. [都说“四五清明” 今年为啥不一样](https://so.toutiao.com/search?keyword=都说“四五清明”+今年为啥不一样)
+1. [宁波一小区外墙被震开裂？不实](https://so.toutiao.com/search?keyword=宁波一小区外墙被震开裂？不实)
+1. [台湾强震已致7死](https://so.toutiao.com/search?keyword=台湾强震已致7死)
+1. [江西玉山通报“提灯定损”事件](https://so.toutiao.com/search?keyword=江西玉山通报“提灯定损”事件)
 1. [李若彤回应58岁未婚未育](https://so.toutiao.com/search?keyword=李若彤回应58岁未婚未育)
+1. [台湾7.3级地震 厦门杭州震感强烈](https://so.toutiao.com/search?keyword=台湾7.3级地震+厦门杭州震感强烈)
+1. [男子在提灯定损房东楼下开播遭驱离](https://so.toutiao.com/search?keyword=男子在提灯定损房东楼下开播遭驱离)
+1. [雷军亲自为小米SU7车主开门](https://so.toutiao.com/search?keyword=雷军亲自为小米SU7车主开门)
+1. [台湾地震：整片山体滑落](https://so.toutiao.com/search?keyword=台湾地震：整片山体滑落)
+1. [大V：提灯定损村委会协调败事有余](https://so.toutiao.com/search?keyword=大V：提灯定损村委会协调败事有余)
+1. [美财政部公布耶伦访华行程](https://so.toutiao.com/search?keyword=美财政部公布耶伦访华行程)
+1. [日本有人拍到海水浴场水位急速下降](https://so.toutiao.com/search?keyword=日本有人拍到海水浴场水位急速下降)
+1. [台湾7.3级强震是今年我国最强地震](https://so.toutiao.com/search?keyword=台湾7.3级强震是今年我国最强地震)
+1. [网友称举报上饶房屋违建官方答非所问](https://so.toutiao.com/search?keyword=网友称举报上饶房屋违建官方答非所问)
+1. [台湾空军基地至少8架F-16战机受损](https://so.toutiao.com/search?keyword=台湾空军基地至少8架F-16战机受损)
+1. [多地出现个人购买商品房专放骨灰盒](https://so.toutiao.com/search?keyword=多地出现个人购买商品房专放骨灰盒)
+1. [南昌铁路局回应部分高铁暂停运营](https://so.toutiao.com/search?keyword=南昌铁路局回应部分高铁暂停运营)
+1. [台专家：地震威力如32颗原子弹爆炸](https://so.toutiao.com/search?keyword=台专家：地震威力如32颗原子弹爆炸)
+1. [实拍江西南昌强对流天气](https://so.toutiao.com/search?keyword=实拍江西南昌强对流天气)
+1. [小学生在烈士陵园遇武警敬礼获回应](https://so.toutiao.com/search?keyword=小学生在烈士陵园遇武警敬礼获回应)
+1. [台湾百年大烟囱被强震“拦头折断”](https://so.toutiao.com/search?keyword=台湾百年大烟囱被强震“拦头折断”)
+1. [专家：本次地震海啸对大陆没啥影响](https://so.toutiao.com/search?keyword=专家：本次地震海啸对大陆没啥影响)
+1. [邱毅发文报平安](https://so.toutiao.com/search?keyword=邱毅发文报平安)
 1. [地震致郭台铭豪宅顶楼游泳池变瀑布](https://so.toutiao.com/search?keyword=地震致郭台铭豪宅顶楼游泳池变瀑布)
+1. [男子小区内驾车碾压3人 警方通报](https://so.toutiao.com/search?keyword=男子小区内驾车碾压3人+警方通报)
+1. [全面还原中甲离谱判罚](https://so.toutiao.com/search?keyword=全面还原中甲离谱判罚)
+1. [日本气象厅：海啸抵达冲绳与那国岛](https://so.toutiao.com/search?keyword=日本气象厅：海啸抵达冲绳与那国岛)
+1. [韩国粉丝送别福宝泣不成声](https://so.toutiao.com/search?keyword=韩国粉丝送别福宝泣不成声)
+1. [台湾著名景点宜兰龟山岛断裂](https://so.toutiao.com/search?keyword=台湾著名景点宜兰龟山岛断裂)
+1. [台湾强震会影响上海高层建筑吗](https://so.toutiao.com/search?keyword=台湾强震会影响上海高层建筑吗)
+1. [姜爷爷母亲去世依然坚持送福宝回国](https://so.toutiao.com/search?keyword=姜爷爷母亲去世依然坚持送福宝回国)
+1. [福州一小区天桥被震裂？官方证实](https://so.toutiao.com/search?keyword=福州一小区天桥被震裂？官方证实)
+1. [台湾地震前“天空怪异美照”引热议](https://so.toutiao.com/search?keyword=台湾地震前“天空怪异美照”引热议)
+1. [台湾民众骑车过桥刚好地震](https://so.toutiao.com/search?keyword=台湾民众骑车过桥刚好地震)
+1. [台民众：此次比9·21强震还可怕](https://so.toutiao.com/search?keyword=台民众：此次比9·21强震还可怕)
+1. [台湾地震一人被落石砸死](https://so.toutiao.com/search?keyword=台湾地震一人被落石砸死)
+1. [高铁晚点](https://so.toutiao.com/search?keyword=高铁晚点)
+1. [专家分析台湾地震成因](https://so.toutiao.com/search?keyword=专家分析台湾地震成因)
+1. [远距离大震为何会使上海的高楼摇晃](https://so.toutiao.com/search?keyword=远距离大震为何会使上海的高楼摇晃)
+1. [台花莲10层大楼强震中倒塌瞬间曝光](https://so.toutiao.com/search?keyword=台花莲10层大楼强震中倒塌瞬间曝光)
+1. [台湾强震已致4死97伤](https://so.toutiao.com/search?keyword=台湾强震已致4死97伤)
+1. [台湾地震已引发局地海啸](https://so.toutiao.com/search?keyword=台湾地震已引发局地海啸)
+1. [网友谈小米营销：看小字否则踩大坑](https://so.toutiao.com/search?keyword=网友谈小米营销：看小字否则踩大坑)
+1. [2000多名师生徒步百里祭英烈](https://so.toutiao.com/search?keyword=2000多名师生徒步百里祭英烈)
+1. [台媒：花莲成“孤城”](https://so.toutiao.com/search?keyword=台媒：花莲成“孤城”)
 1. [俞敏洪：随时做好关门准备](https://so.toutiao.com/search?keyword=俞敏洪：随时做好关门准备)
 1. [强震逢民众党晨会 柯文哲趴地躲桌下](https://so.toutiao.com/search?keyword=强震逢民众党晨会+柯文哲趴地躲桌下)
-1. [台专家：地震威力如32颗原子弹爆炸](https://so.toutiao.com/search?keyword=台专家：地震威力如32颗原子弹爆炸)
 1. [江西狂风尖啸窗户被吹炸](https://so.toutiao.com/search?keyword=江西狂风尖啸窗户被吹炸)
-1. [雷军：大家是不是该叫我雷厂长了](https://so.toutiao.com/search?keyword=雷军：大家是不是该叫我雷厂长了)
 1. [台湾强震全岛摇晃1分钟 整栋楼倾斜](https://so.toutiao.com/search?keyword=台湾强震全岛摇晃1分钟+整栋楼倾斜)
 1. [vivo X Fold3/Pro系列手机今日开售](https://so.toutiao.com/search?keyword=vivo+X Fold3/Pro系列手机今日开售)
-1. [男子小区内驾车碾压3人 警方通报](https://so.toutiao.com/search?keyword=男子小区内驾车碾压3人+警方通报)
-1. [台湾百年大烟囱被强震“拦头折断”](https://so.toutiao.com/search?keyword=台湾百年大烟囱被强震“拦头折断”)
 1. [湖人首发五人近10场场均轰103.4分](https://so.toutiao.com/search?keyword=湖人首发五人近10场场均轰103.4分)
 1. [江西风雹灾害已致7人死亡](https://so.toutiao.com/search?keyword=江西风雹灾害已致7人死亡)
-1. [台湾著名景点宜兰龟山岛断裂](https://so.toutiao.com/search?keyword=台湾著名景点宜兰龟山岛断裂)
 1. [提灯定损事件伤害了谁](https://so.toutiao.com/search?keyword=提灯定损事件伤害了谁)
-1. [全面还原中甲离谱判罚](https://so.toutiao.com/search?keyword=全面还原中甲离谱判罚)
-1. [地震后目睹山崩 台湾游客崩溃大哭](https://so.toutiao.com/search?keyword=地震后目睹山崩+台湾游客崩溃大哭)
 1. [江苏常熟有震感：吊灯摇晃](https://so.toutiao.com/search?keyword=江苏常熟有震感：吊灯摇晃)
 1. [胡锡进：在美国无存款无房产无亲人](https://so.toutiao.com/search?keyword=胡锡进：在美国无存款无房产无亲人)
 1. [花莲地震4.0级及以上余震已达21次](https://so.toutiao.com/search?keyword=花莲地震4.0级及以上余震已达21次)
 1. [雷军：小米正式成为一家车厂](https://so.toutiao.com/search?keyword=雷军：小米正式成为一家车厂)
-1. [远距离大震为何会使上海的高楼摇晃](https://so.toutiao.com/search?keyword=远距离大震为何会使上海的高楼摇晃)
 1. [台湾地震致172个基站受影响](https://so.toutiao.com/search?keyword=台湾地震致172个基站受影响)
 1. [菲律宾解除海啸警报](https://so.toutiao.com/search?keyword=菲律宾解除海啸警报)
 1. [雷军：小米SU7锁单量已超4万单](https://so.toutiao.com/search?keyword=雷军：小米SU7锁单量已超4万单)
@@ -61,13 +80,9 @@
 1. [退租定损谁说的算](https://so.toutiao.com/search?keyword=退租定损谁说的算)
 1. [开封王婆家属否认成立婚介公司](https://so.toutiao.com/search?keyword=开封王婆家属否认成立婚介公司)
 1. [南昌打雷视频引恐慌 市民：加了特效](https://so.toutiao.com/search?keyword=南昌打雷视频引恐慌+市民：加了特效)
-1. [专家分析台湾地震成因](https://so.toutiao.com/search?keyword=专家分析台湾地震成因)
 1. [媒体：别让流量消解相亲严肃性](https://so.toutiao.com/search?keyword=媒体：别让流量消解相亲严肃性)
-1. [台民众：此次比9·21强震还可怕](https://so.toutiao.com/search?keyword=台民众：此次比9·21强震还可怕)
 1. [詹姆斯近2战投篮命中率79.3%](https://so.toutiao.com/search?keyword=詹姆斯近2战投篮命中率79.3%)
 1. [地震海啸驾车避险自救指南](https://so.toutiao.com/search?keyword=地震海啸驾车避险自救指南)
-1. [高铁晚点](https://so.toutiao.com/search?keyword=高铁晚点)
-1. [邱毅发文报平安](https://so.toutiao.com/search?keyword=邱毅发文报平安)
 1. [台未来三天或还有规模7级地震发生](https://so.toutiao.com/search?keyword=台未来三天或还有规模7级地震发生)
 1. [马英九就台湾强震发声：望一切平安](https://so.toutiao.com/search?keyword=马英九就台湾强震发声：望一切平安)
 1. [台北一新建高楼上方吊臂被地震震落](https://so.toutiao.com/search?keyword=台北一新建高楼上方吊臂被地震震落)
